--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
@@ -24,6 +24,7 @@
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
+    "vite-plugin-mock": "^3.0.1",
     "vue-tsc": "^1.8.25"
   }
 }
