--- a/_05_E-SHOP/.classpath
+++ b/_05_E-SHOP/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container/Test"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry exported="true" kind="lib" path="/home/ivan/Downloads/jakarta.json-api-2.1.3.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
