--- a/_05_E-SHOP/.project
+++ b/_05_E-SHOP/.project
@@ -35,4 +35,15 @@
 			<locationURI>PARENT-2-PROJECT_LOC/mysql-connector-j-8.3.0/mysql-connector-j-8.3.0.jar</locationURI>
 		</link>
 	</linkedResources>
+	<filteredResources>
+		<filter>
+			<id>1706092107896</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
